# pointcloud_tutorial

./: CMakeLists.txt  README.md
3D_features/: open3d_compute_normals.py  pcl_compute_normals.cpp
data/: object_templates.txt  robot1.pcd  robot2.pcd
filtering/: open3d_filtering.py  pcl_filtering.cpp
io/: open3d_file_io.py  pcl_write_pcd.cpp
keypoints/: open3d_keypoints.py  pcl_keypoints.cpp
openni_grabber/: pcl_openni_grabber.cpp
registration/: open3d_colored_icp.py  open3d_fast_global_registration.py  open3d_global_registration.py  open3d_icp.py  pcl_icp.cpp  pcl_template_matching.cpp
sample_consensus/: pcl_sample_consensus.cpp
segmentation/: pcl_euclidean_cluster_extraction.cpp  pcl_plane_segmentation.cpp
trees/: open3d_kdtree.py  pcl_octree.cpp
